fix: Push funcs to classes, made collision happen on overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,9 @@
 body {
   text-align: center;
-}
-
-/*
- * Base structure
- */
-
-html, body {
-  /* height: 100%; */
   background-color: #333;
-  /* display: -ms-flexbox; */
-  /* display: inline-flex; */
-  /* align-self: center; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
-  */
+  color: #fff;
 }
 
 canvas {
-  background-color: #333;
-}
-
-body {
-  /* display: -ms-flexbox; */
-  /* display: flex; */
-  color: #fff;
-  background-color: #333;
-  */
-}
-
-nav {
   background-color: #333;
 }
